tests/snapshots/pagerduty__acknowledged_normalizes_to_acknowledged.snap
---
source: tests/pagerduty.rs
expression: alerts
---
- source: pagerduty
  source_alert_id: PGR0VU2
  labels:
    service: checkout
    urgency: high
  annotations:
    summary: 5xx rate above 2% on checkout
  starts_at: "2026-07-12T14:03:02Z"
  status: acknowledged
  raw_payload: "[raw]"
